# orchard

./: .dockerignore  .env  .gitignore  ASYNC_INGESTION_GUIDE.md  Dockerfile  EMBEDDING_MIGRATION_README.md  MODEL_CACHING_GUIDE.md  README.md  TESTING_GUIDE.md  UPSTASH_UPLOAD_README.md  api_test_chunking_embeddings.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  download_models.py  entrypoint.sh  env.example  example.md  fly.toml  main.py  migrate_embeddings.py  ollama-fly.toml  orchard  orchard_cli.py  orchard_cli_standalone.py  pyproject.toml  rag_config.jsonc  rag_config.yaml  requirements.txt  setup_models.sh  setup_ollama.py  start.sh  test_async_ingestion.py  test_chunking_embeddings.py  test_embedding_pipeline.sh  test_results_20250717_115204.json  test_setup.py  upstash_vector_upload.py
app/agents/: qa_agent.py  query_agent.py
app/api/: main.py  plugins.py
app/core/: config.py  context_providers.py  logging.py  logging_config.py  prompt_config.py
app/models/: plugin_schemas.py  schemas.py
app/services/: ingestion_jobs.py  intent_detection.py  llm_service.py  plugin_service.py  rag_service.py  (+1 more)
app/utils/: database.py  (+1 more)
cli/: CLI_SUMMARY.md  README.md  __init__.py  helpers.py  main.py
documents/: mock_slack_messages_6mo.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  fly.toml  package-lock.json  package.json  tailwind.config.js
plugins/: README.md  SMART_CHUNKING.md  __init__.py  base.py  chunking_registry.py  config.py  plugin_setup.py  registry.py  streaming_base.py
plugins/streaming_echo/: pyproject.toml  streaming_echo_plugin.py
(+65 files in other folders)
